[gd_scene load_steps=5 format=3 uid="uid://0tbubypa746y"]

[ext_resource type="Script" uid="uid://c3xlodn3dbab7" path="res://escenas/main/main.gd" id="1_e0ogj"]
[ext_resource type="FontFile" uid="uid://481p5ywgwc7n" path="res://assets/fonts/CursedTimerUlil-Aznm.ttf" id="1_paxdn"]
[ext_resource type="AudioStream" uid="uid://dqgaao0jcslve" path="res://assets/sounds/fondo.wav" id="3_g6o4e"]

[sub_resource type="LabelSettings" id="LabelSettings_paxdn"]
font = ExtResource("1_paxdn")
font_size = 500
font_color = Color(0, 0, 0, 1)
outline_size = 3
outline_color = Color(0.509804, 1, 0.145098, 1)
shadow_size = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_e0ogj")

[node name="Timer" type="Timer" parent="."]

[node name="flag" type="ColorRect" parent="."]
offset_right = 1156.0
offset_bottom = 647.0

[node name="minutos" type="Label" parent="."]
visible = false
offset_left = 262.0
offset_top = 94.0
offset_right = 887.0
offset_bottom = 595.0
text = "00"
label_settings = SubResource("LabelSettings_paxdn")

[node name="countdown" type="Button" parent="."]
offset_left = 83.0
offset_top = 242.0
offset_right = 501.0
offset_bottom = 381.0
text = "Cuenta Regresiva"

[node name="random" type="Button" parent="."]
offset_left = 656.0
offset_top = 241.0
offset_right = 1074.0
offset_bottom = 380.0
text = "Modo Aleatorio"

[node name="restart" type="Button" parent="."]
visible = false
offset_left = 279.0
offset_top = 542.0
offset_right = 900.0
offset_bottom = 634.0
text = "Reiniciar"

[node name="pause" type="Button" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.0196078)
offset_left = 1.0
offset_right = 1155.0
offset_bottom = 532.0

[node name="audio" type="Button" parent="."]
offset_left = 1050.0
offset_top = 562.0
offset_right = 1146.0
offset_bottom = 644.0

[node name="back" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g6o4e")
volume_db = -9.0
autoplay = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]

[node name="actions" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="countdown" to="." method="_on_countdown_pressed"]
[connection signal="pressed" from="random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="audio" to="." method="_on_audio_pressed"]
